--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: cinemapedia
 description: A new Flutter project.
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: ">=2.19.6 <3.0.0"
 
 dependencies:
   animate_do: ^3.0.2
@@ -20,6 +20,7 @@ dependencies:
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.1
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   build_runner: ^2.3.3
@@ -33,3 +34,4 @@ flutter:
 
   assets:
     - .env
+
